--- a/motiv8-fe/src/App.css
+++ b/motiv8-fe/src/App.css
@@ -13,7 +13,7 @@
   margin: 0 auto;
   padding: 2rem;
   width: 100%;
-  align-items: flex-start;
+  align-items: stretch;
 }
 
 .main-content > * {
