--- a/motiv8-fe/src/components/WorkoutDays.css
+++ b/motiv8-fe/src/components/WorkoutDays.css
@@ -1,5 +1,6 @@
 .workout-days-container {
   width: 100%;
+  height: 100%;
   padding: 2rem;
   background-color: #faf9ff;
   border: 2px solid #ddd6fe;
