--- a/motiv8-fe/src/components/ImageUpload.css
+++ b/motiv8-fe/src/components/ImageUpload.css
@@ -1,5 +1,8 @@
 .upload-container {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .upload-container h2 {
@@ -15,6 +18,8 @@
   border: 2px solid #ddd6fe;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  overflow: hidden;
 }
 
 .current-selfie-section h3 {
@@ -66,6 +71,8 @@ input[type="file"] {
   align-items: center;
   justify-content: center;
   flex: 1;
+  min-height: 0;
+  overflow: hidden;
 }
 
 .preview-image {
