--- a/motiv8-fe/src/components/ImageUpload.css
+++ b/motiv8-fe/src/components/ImageUpload.css
@@ -1,6 +1,6 @@
 .upload-container {
   width: 100%;
-  height: 100%;
+  height: var(--card-height, 480px);
   display: flex;
   flex-direction: column;
 }
