--- a/motiv8-fe/src/components/WorkoutDays.css
+++ b/motiv8-fe/src/components/WorkoutDays.css
@@ -1,12 +1,13 @@
 .workout-days-container {
   width: 100%;
-  height: 100%;
+  height: var(--card-height, 480px);
   padding: 2rem;
   background-color: #faf9ff;
   border: 2px solid #ddd6fe;
   border-radius: 12px;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
 }
 
 .workout-days-container h2 {
