--- a/motiv8-fe/src/components/AntiMotivationMode.css
+++ b/motiv8-fe/src/components/AntiMotivationMode.css
@@ -11,7 +11,7 @@
 
 .header-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   margin-bottom: 0.5rem;
@@ -21,6 +21,9 @@
   color: #646cff;
   margin: 0;
   font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
 }
 
 .anti-motivation-container .description {
