--- a/motiv8-fe/src/pages/Login.css
+++ b/motiv8-fe/src/pages/Login.css
@@ -7,7 +7,7 @@
 }
 
 .login-box {
-  background-color: #ffffff;
+  background-color: #faf9ff;
   border: 2px solid #ddd6fe;
   border-radius: 12px;
   padding: 3rem 4rem;
